# dup-detector

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
docs/: dev-tasks.md
landing/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
landing/src/: App.svelte  app.css
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: scan_benchmark.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/duplicates/: mod.rs
src-tauri/src/hasher/: mod.rs
src-tauri/src/scanner/: filter.rs  mod.rs
src/lib/api/: tauri.test.ts  tauri.ts
src/lib/components/: ConfirmDialog.svelte  ConfirmDialog.test.ts  DeleteControls.svelte  DeleteControls.test.ts  DuplicateGroups.svelte  DuplicateGroups.test.ts  ErrorPanel.svelte  ErrorPanel.test.ts  FolderSelector.svelte  FolderSelector.test.ts  ProgressBar.svelte  ProgressBar.test.ts  ScanControls.svelte  ScanControls.test.ts
src/lib/stores/: folderStore.test.ts  folderStore.ts  scanStore.test.ts  scanStore.ts
src/lib/types/: index.ts
src/lib/utils/: format.test.ts  format.ts
src/tests/: setup.ts
tests/: app.spec.ts  click-expand.spec.ts  filters.spec.ts
