[package]
name = "duplicate-file-detector"
version = "0.1.6"
description = "A fast, efficient desktop app for detecting and removing duplicate files"
authors = ["Duplicate File Detector Contributors"]
license = "MIT"
repository = "https://github.com/ezcorp-org/dup-detector"
homepage = "https://github.com/ezcorp-org/dup-detector"
edition = "2021"

[lib]
name = "dup_detector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Filesystem
walkdir = "2.4"

# Hashing
md-5 = "0.10"

# Parallel processing
rayon = "1.8"

# Cross-platform trash
trash = "5"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"

# Better synchronization primitives
parking_lot = "0.12"

# Async runtime (for Tauri commands)
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scan_benchmark"
harness = false
